fix spacing

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -22,12 +22,12 @@
     .contact-links {
         float: right;
         width: $sideWidth;
-        margin-top: -10px;
+        margin-top: -12px;
         padding-left: 12px;
 
         >a {
             display: block;
-            margin-bottom: 6px;
+            margin-bottom: 5px;
         }
     }
 }
